added required parameter for email

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <footer>
         <form action="#">
-            <input type="email" name="email"        placeholder="Inserisci qui la tua email"> 
+            <input type="email" name="email" required placeholder="Inserisci qui la tua email"> 
             <input type="submit" value="Iscriviti">
         </form>
     </footer>
