added semantic tags and label, removed nosense span

--- a/index.html
+++ b/index.html
@@ -12,38 +12,38 @@
 </head>
 
 <body>
+    <header>
+        <h1>
+            Titolo della pagina
+        </h1>
+        <hr>
+        <h2>
+            Sottotitolo
+        </h2>
+    </header>
 
-    <h1>
-        Titolo della pagina
-    </h1>
-    <hr>
+    <main>
+        <p>
+            Veniam labore sit aliquip anim veniam. In sit velit ut consequat do nulla quis ut elit mollit proident aliqua irure. Reprehenderit consequat do non magna elit eu dolore aliqua et. Pariatur nisi velit eu commodo. Eiusmod do ex sint Lorem ipsum reprehenderit ad nisi. Commodo dolor velit dolor anim in do aute labore amet ut nulla reprehenderit in incididunt.Elit irure sit eiusmod excepteur deserunt id ut do veniam sint reprehenderit nisi tempor aliqua. Eiusmod exercitation aliqua quis quis occaecat dolor ullamco laboris non non. Est pariatur non dolor est occaecat qui nulla minim anim. Esse labore nisi commodo cupidatat qui sit et deserunt. Occaecat non nostrud nostrud tempor commodo nisi sit esse aute. Ipsum qui enim labore dolor ullamco et id irure voluptate consectetur eu in. Non ullamco laboris tempor veniam nostrud dolore laboris ex.
+        </p>
 
-    <h2>
-        Sottotitolo
-    </h2>
+        <br>
+            <img src="Images/hands.png" alt="image not found" height="300px" >
+            <img src="Images/laptop.png" alt="image not found" height="300px">
 
-    <p>
-        Veniam labore sit aliquip anim veniam. In sit velit ut consequat do nulla quis ut elit mollit proident aliqua irure. Reprehenderit consequat do non magna elit eu dolore aliqua et. Pariatur nisi velit eu commodo. Eiusmod do ex sint Lorem ipsum reprehenderit ad nisi. Commodo dolor velit dolor anim in do aute labore amet ut nulla reprehenderit in incididunt.Elit irure sit eiusmod excepteur deserunt id ut do veniam sint reprehenderit nisi tempor aliqua. Eiusmod exercitation aliqua quis quis occaecat dolor ullamco laboris non non. Est pariatur non dolor est occaecat qui nulla minim anim. Esse labore nisi commodo cupidatat qui sit et deserunt. Occaecat non nostrud nostrud tempor commodo nisi sit esse aute. Ipsum qui enim labore dolor ullamco et id irure voluptate consectetur eu in. Non ullamco laboris tempor veniam nostrud dolore laboris ex.
-    </p>
-
-    <br>
-    <span>
-        <img src="Images/hands.png" alt="image not found" height="300px" >
-        <img src="Images/laptop.png" alt="image not found" height="300px">
-    </span>
-
-    <p>
-        Voluptate reprehenderit sint aliqua commodo pariatur laborum incididunt. Ea aliquip dolore ex sunt nisi adipisicing culpa excepteur elit ut laboris sunt. Culpa minim excepteur velit aliqua mollit tempor officia id sit laborum. Sint sunt mollit ut ullamco incididunt ipsum aliqua proident nostrud magna cupidatat. Culpa reprehenderit tempor mollit consectetur magna anim adipisicing veniam nostrud mollit incididunt proident. Ex magna enim sit voluptate velit proident nulla mollit proident qui ea nisi minim.
-        Cillum laboris magna ex eu. Tempor incididunt fugiat elit ut cillum cupidatat aliqua nisi adipisicing reprehenderit ad eiusmod eu. Aute sit culpa tempor consequat qui sunt in mollit ut deserunt adipisicing nostrud amet velit. Esse consequat adipisicing nostrud amet. Quis cillum veniam ad ex proident non eiusmod mollit culpa consectetur consequat consequat. Id et magna irure sint exercitation Lorem magna laborum voluptate sit. Ut ea anim ea excepteur occaecat culpa ad magna cillum. Duis cillum Lorem commodo do.
-        Adipisicing ex incididunt exercitation excepteur fugiat sunt minim proident eiusmod incididunt amet reprehenderit. Id irure ad reprehenderit id cupidatat quis officia deserunt non tempor incididunt deserunt. Duis ut voluptate dolor ea enim magna amet elit dolor. Commodo enim minim enim veniam et adipisicing cupidatat nulla minim id eiusmod. Esse velit velit pariatur laborum consequat exercitation proident et deserunt irure ex. Sit non anim laboris cillum aliqua eu aliquip minim eiusmod elit quis occaecat irure tempor.
-        Enim id labore cillum nostrud laboris reprehenderit officia in tempor aliquip commodo. Eu dolor proident officia et proident ad enim id sint non cillum mollit esse duis. Nostrud ut in elit quis sunt incididunt qui nisi do. Fugiat anim magna id nisi in. Cillum quis sit laborum proident qui minim qui dolor dolor voluptate voluptate. Ex do est in cillum fugiat ullamco mollit fugiat occaecat ex.
-    </p>
-    <br><br>
-
-    <h2 style="text-align:center;">Iscriviti alla newsletter!</h2>
+        <p>
+            Voluptate reprehenderit sint aliqua commodo pariatur laborum incididunt. Ea aliquip dolore ex sunt nisi adipisicing culpa excepteur elit ut laboris sunt. Culpa minim excepteur velit aliqua mollit tempor officia id sit laborum. Sint sunt mollit ut ullamco incididunt ipsum aliqua proident nostrud magna cupidatat. Culpa reprehenderit tempor mollit consectetur magna anim adipisicing veniam nostrud mollit incididunt proident. Ex magna enim sit voluptate velit proident nulla mollit proident qui ea nisi minim.
+            Cillum laboris magna ex eu. Tempor incididunt fugiat elit ut cillum cupidatat aliqua nisi adipisicing reprehenderit ad eiusmod eu. Aute sit culpa tempor consequat qui sunt in mollit ut deserunt adipisicing nostrud amet velit. Esse consequat adipisicing nostrud amet. Quis cillum veniam ad ex proident non eiusmod mollit culpa consectetur consequat consequat. Id et magna irure sint exercitation Lorem magna laborum voluptate sit. Ut ea anim ea excepteur occaecat culpa ad magna cillum. Duis cillum Lorem commodo do.
+            Adipisicing ex incididunt exercitation excepteur fugiat sunt minim proident eiusmod incididunt amet reprehenderit. Id irure ad reprehenderit id cupidatat quis officia deserunt non tempor incididunt deserunt. Duis ut voluptate dolor ea enim magna amet elit dolor. Commodo enim minim enim veniam et adipisicing cupidatat nulla minim id eiusmod. Esse velit velit pariatur laborum consequat exercitation proident et deserunt irure ex. Sit non anim laboris cillum aliqua eu aliquip minim eiusmod elit quis occaecat irure tempor.
+            Enim id labore cillum nostrud laboris reprehenderit officia in tempor aliquip commodo. Eu dolor proident officia et proident ad enim id sint non cillum mollit esse duis. Nostrud ut in elit quis sunt incididunt qui nisi do. Fugiat anim magna id nisi in. Cillum quis sit laborum proident qui minim qui dolor dolor voluptate voluptate. Ex do est in cillum fugiat ullamco mollit fugiat occaecat ex.
+        </p>
+        <br><br>
+    </main>
 
     <footer>
-        <form action="#">
+        <h2 style="text-align:center;">Iscriviti alla newsletter!</h2>
+        <form action="#" style="margin: 25px; text-align: center;">
+            <label for="email"> email</label>
             <input type="email" name="email" required placeholder="Inserisci qui la tua email"> 
             <input type="submit" value="Iscriviti">
         </form>
