Correzioni #2 sull'esercizio

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+        <!-- Manca ancora un html semantico qui -->
         <p>
             Veniam labore sit aliquip anim veniam. In sit velit ut consequat do nulla quis ut elit mollit proident aliqua irure. Reprehenderit consequat do non magna elit eu dolore aliqua et. Pariatur nisi velit eu commodo. Eiusmod do ex sint Lorem ipsum reprehenderit ad nisi. Commodo dolor velit dolor anim in do aute labore amet ut nulla reprehenderit in incididunt.Elit irure sit eiusmod excepteur deserunt id ut do veniam sint reprehenderit nisi tempor aliqua. Eiusmod exercitation aliqua quis quis occaecat dolor ullamco laboris non non. Est pariatur non dolor est occaecat qui nulla minim anim. Esse labore nisi commodo cupidatat qui sit et deserunt. Occaecat non nostrud nostrud tempor commodo nisi sit esse aute. Ipsum qui enim labore dolor ullamco et id irure voluptate consectetur eu in. Non ullamco laboris tempor veniam nostrud dolore laboris ex.
         </p>
@@ -44,6 +45,7 @@
         <h2 style="text-align:center;">Iscriviti alla newsletter!</h2>
         <form action="#" style="margin: 25px; text-align: center;">
             <label for="email"> email</label>
+            <!-- Il label qui ha bisogno di un id ! -->
             <input type="email" name="email" required placeholder="Inserisci qui la tua email"> 
             <input type="submit" value="Iscriviti">
         </form>
