--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
                 </p>
             </section> 
             <br>
-            <img src="Images/hands.png" alt="image not found" height="300px" >
-            <img src="Images/laptop.png" alt="image not found" height="300px">
-
+            <figure>
+                <img src="Images/hands.png" alt="image not found" height="300px" >
+                <img src="Images/laptop.png" alt="image not found" height="300px">
+            </figure>
             <section>
                 <p>
                     Voluptate reprehenderit sint aliqua commodo pariatur laborum incididunt. Ea aliquip dolore ex sunt nisi adipisicing culpa excepteur elit ut laboris sunt. Culpa minim excepteur velit aliqua mollit tempor officia id sit laborum. Sint sunt mollit ut ullamco incididunt ipsum aliqua proident nostrud magna cupidatat. Culpa reprehenderit tempor mollit consectetur magna anim adipisicing veniam nostrud mollit incididunt proident. Ex magna enim sit voluptate velit proident nulla mollit proident qui ea nisi minim.
